# nenc

./: .gitignore  README.md  config_example.py  datastore.py  devices.csv  docker-compose-dev.yaml  models.py  pyproject.toml  requirements.txt
app/: main.py
dockerfiles/: Dockerfile-Controller
